Added build script for console app.